# gitlab-gilfoyle

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: DEPLOYMENT_TASKS.md  IMPLEMENTATION_PLAN.md  SETUP_AND_TESTING_GUIDE.md
docs/adr/: 000-adr-template.md  001-gilfoyle-ai-agent-for-mr-review.md
src/gilfoyle/: __init__.py  config.py  main.py
src/gilfoyle/agent/: __init__.py  gilfoyle.py  prompts.py  tools.py
src/gilfoyle/clients/: __init__.py  gitlab.py  teamwork.py
src/gilfoyle/models/: __init__.py  events.py  review.py
src/gilfoyle/utils/: __init__.py  parsing.py
src/gilfoyle/webhooks/: __init__.py  handlers.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_gitlab.py  test_teamwork.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_parsing.py  test_webhooks.py
